--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
       </li>
     <% } %>
     </ul>
-    <span class="listCount">total number: <%= count[0].count%></span>
+    <span class="listCount">Total Tasks Completed: <%= count[0].count%></span>
     <section class="btns">
       <button id="clearBtn" type="button" name="button">Clear List</button>
       <button id="clearItems" type="button" name="button">Clear Completed</button>
